# factorio-containers

./: .gitignore  CLAUDE.md  Containerfile  Makefile  README.md  build.sh  clean_images.sh  config.ini  containertest  control_server.css  factorio_container.py  factorio_server.py  pyproject.toml  requirements.txt  rerun_all.sh  run_instance.sh  server_control.py
Container/: Containerfile  server-adminlist.json  server-settings.json
Container-Satisfactory/: Containerfile  Containerfile.steamcmd  start_server.sh
server-scripts/: start_server.sh
src/: control_server.css  factorio_container.py  factorio_server.py  game_driver.py  image_build.py  leanrcon.py  satisfactory_api.py  satisfactory_container.py  satisfactory_image_build.py  satisfactory_server.py  satisfactory_tab.py  server_control.py
tests/: conftest.py  test_logic.py  test_satisfactory_logic.py  test_satisfactory_tab.py  test_tui.py  test_tui_tabs.py
tests/integration/: conftest.py  test_rcon_save.py
