[project]
name = "factorio-container"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
# license = "GNU-3.0"
dependencies = [
    "podman>=5.4.0.1",
    "textual>=2.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
dev = [
    "textual-dev",
]

[project.scripts]
factainer = "server_control:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server_control", "factorio_server", "factorio_container", "image_build", "leanrcon"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]